--- a/helloworld-sync.yaml
+++ b/helloworld-sync.yaml
@@ -1,9 +1,14 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: helloworld
+---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
   name: helloworld
-  namespace: flux-system
+  namespace: helloworld
 spec:
   interval: 30s
   url: https://github.com/airwalk-mj/tf-demo-flux
@@ -14,7 +19,7 @@ apiVersion: infra.contrib.fluxcd.io/v1alpha2
 kind: Terraform
 metadata:
   name: helloworld
-  namespace: flux-system
+  namespace: helloworld
 spec:
   interval: 1m
   approvePlan: auto
@@ -22,7 +27,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: helloworld
-    namespace: flux-system
+    namespace: helloworld
   writeOutputsToSecret:
     name: helloworld-output
 
